--- a/assets/sass/_contact.scss
+++ b/assets/sass/_contact.scss
@@ -25,7 +25,7 @@
       border: none;
       box-shadow: inherit;
       padding: 15px;
-      background: #ffffff;
+      background: $white;
     }
     & textarea {
       padding: 15px;
@@ -34,6 +34,7 @@
       resize: none;
       border: none;
       box-shadow: inherit;
+      background: $white;
     }
   }
 }
@@ -64,7 +65,6 @@
         }
       }
     }
-    
   }
 }
 .nav-tabs {
@@ -84,6 +84,7 @@
 }
 .tab-pane {
   display: none;
+
   &.active {
     display: block;
   }
@@ -114,6 +115,67 @@
   & iframe {
     width: 100%;
     height: 360px;
+  }
+}
+#contact {
+  padding-top: 200px;
+  padding-bottom: 150px;
+  background: #f8f8f8;
+}
+.contact-heading {
+  & span {
+    font-weight: 600;
+    position: relative;
+    z-index: 2;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 48px;
+      height: 48px;
+      background-color: $yellow;
+      z-index: 1;
+      left: 30px;
+      top: -54px;
+      border-radius: 5px;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      width: 32px;
+      height: 32px;
+      z-index: -1;
+      background-color: $yellow;
+      top: -8px;
+      left: 76px;
+      border-radius: 5px;
+    }
+  }
+  & h1 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-weight: 700;
+  }
+}
+.contact-item {
+  padding: 50px 30px;
+  background: #ffffff;
+  &:hover {
+    box-shadow: 0 15px 55px -5px rgb(9 31 67 / 10%);
+  }
+}
+.info-item {
+  & i {
+    font-size: 40px;
+    color: $yellow;
+  }
+  & h4 {
+    margin-top: 10px;
+  }
+}
+.contact-img {
+  margin-top: 50px;
+  & img {
+    width: 100%;
   }
 }
 @media only screen and (min-width: 740px) and (max-width: 1025px) {
