--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -1,6 +1,6 @@
 #footer {
   padding-bottom: 100px;
-  background: #fafafa;
+  background: $white;
   box-shadow: 1px 0px 10px rgb(0 0 0 / 10%);
 }
 .footer-items {
