--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ ul {
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 section[id] {
@@ -1226,7 +1227,7 @@ section[id] {
 }
 #footer {
   padding-bottom: 100px;
-  background: #fafafa;
+  background: #ffffff;
   box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -1284,6 +1285,202 @@ section[id] {
   .footer-link {
     padding-left: 32px;
   }
+}
+.blog-area {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.blog-area .blog-items .item {
+  background: #ffffff;
+  box-shadow: 0 0 10px #cccccc;
+}
+.blog-area .blog-items .item .info {
+  padding: 30px;
+}
+.blog-area .blog-items .item .info .cats {
+  position: relative;
+  z-index: 1;
+  padding-left: 25px;
+  margin-bottom: 15px;
+}
+.blog-area .blog-items .item .info .cats a {
+  text-decoration: none;
+  font-weight: 600;
+  color: #1c1c1d;
+}
+.blog-area .blog-items .item .info .cats a::after {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  content: "";
+  height: 1px;
+  width: 15px;
+  background: #ffab00;
+}
+.blog-area .blog-items .item .info .meta {
+  padding-bottom: 15px;
+}
+.blog-area .blog-items .item .info .meta ul {
+  margin: 0;
+  list-style-type: none;
+}
+.blog-area .blog-items .item .info .meta ul li {
+  display: inline-block;
+  margin-right: 10px;
+  position: relative;
+  z-index: 1;
+  padding-right: 10px;
+  font-weight: 600;
+  font-size: 14px;
+}
+.blog-area .blog-items .item .info .meta ul li i {
+  color: #ffab00;
+  margin-right: 5px;
+  font-weight: 500;
+}
+.blog-area .blog-items .item .info .meta ul li:first-child::after {
+  position: absolute;
+  right: -2px;
+  top: 2px;
+  content: "";
+  height: 15px;
+  width: 1px;
+  background: #666666;
+  transform: rotate(15deg);
+}
+.blog-area .blog-items .item .info .meta a {
+  color: #ffab00;
+  text-decoration: none;
+}
+.blog-area .blog-items .item h4 {
+  font-weight: 600;
+  line-height: 1.4;
+}
+.blog-area .blog-items .item h4 a {
+  color: #1c1c1d;
+}
+.blog-area .thumb {
+  position: relative;
+  margin-bottom: 0;
+}
+
+@media (min-width: 1200px) {
+  .container-fill {
+    width: 100%;
+    max-width: 100%;
+    padding: 0;
+  }
+}
+@media (min-width: 992px) {
+  .container-fill {
+    max-width: 960px;
+  }
+}
+@media (min-width: 768px) {
+  .container-fill {
+    max-width: 720px;
+  }
+}
+@media (min-width: 576) {
+  .container-fill {
+    max-width: 540px;
+  }
+}
+.case-studies-area {
+  padding-bottom: 120px;
+}
+.case-studies-area .item {
+  overflow: hidden;
+  transition: all 0.35s ease-in-out;
+}
+.case-studies-area .item .thumb {
+  overflow: hidden;
+  transition: all 0.35s ease-in-out;
+  margin-bottom: 0;
+}
+.case-studies-area .item .thumb img {
+  transition: all 0.35s ease-in-out;
+  display: block;
+  width: 100%;
+}
+.case-studies-area .item .info {
+  position: relative;
+  z-index: 1;
+}
+.case-studies-area .item .info .info-items {
+  position: absolute;
+  left: 30px;
+  right: 60px;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.35s ease-in-out;
+  opacity: 0;
+}
+.case-studies-area .item .info .info-items .left-info {
+  padding: 20px 20px;
+  padding-right: 100px;
+}
+.case-studies-area .item .info .info-items h4 {
+  font-weight: 600;
+  margin-bottom: 7px;
+  font-size: 20px;
+  text-transform: capitalize;
+}
+.case-studies-area .item .info .info-items h4 a {
+  color: #1c1c1d;
+}
+.case-studies-area .item .info .info-items ul {
+  padding: 0;
+}
+.case-studies-area .item .info .info-items ul li {
+  display: inline-block;
+  margin-right: 5px;
+  position: relative;
+}
+.case-studies-area .item .info .info-items .right-info a {
+  display: inline-block;
+  padding: 0 40px;
+  background: #086ad8;
+  color: #ffffff;
+  position: absolute;
+  height: 80%;
+  right: -30px;
+  top: 10%;
+}
+.case-studies-area .item .info .info-items .right-info a i {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: 900;
+}
+.case-studies-area .item:hover img {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+.case-studies-area .item:hover .info .info-items {
+  bottom: 30px;
+  opacity: 1;
+}
+
+.case-carousel {
+  display: inline-block;
+  width: 100%;
+  z-index: 1;
+  -webkit-tap-highlight-color: transparent;
+  position: relative;
+}
+.case-carousel .owl-stage-outer .owl-stage {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
