--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -1,5 +1,4 @@
 #footer {
-  padding-bottom: 100px;
   background: $white;
   box-shadow: 1px 0px 10px rgb(0 0 0 / 10%);
 }
@@ -52,6 +51,26 @@
   & p {
     margin-top: 20px;
     font-weight: 500;
+  }
+}
+.footer-bottom {
+  padding: 20px 0;
+  border-top: 1px solid #cccccc;
+  & p {
+    margin: 0;
+    color: #cccccc;
+  }
+  & a {
+    color: $dark;
+    font-weight: 600;
+  }
+  & li {
+    display: inline-block;
+    margin: 0;
+    margin-left: 15px;
+  }
+  & .link {
+    text-align: right;
   }
 }
 @media only screen and (max-width: 739px) {
